--- a/views/pages/form.ejs
+++ b/views/pages/form.ejs
@@ -4,10 +4,13 @@
             create a user by filling out the fields below:
             <hr/>
             <form action="/user_create" method="POST">
-                <input placeholder="first names" name="firstname"/>
-                <input placeholder="first names" name="lastname"/>
+                <input placeholder="first name" name="firstname"/>
+                <input placeholder="last name" name="lastname"/>
                 <button>Submit</button> 
             </form>
+        </div>
+        <div>
+            <a href="/users">show users</a>
         </div>
     </body>
 </html>
